--- a/app/views/menu_items/_form.html.erb
+++ b/app/views/menu_items/_form.html.erb
@@ -1,15 +1,35 @@
-<%= form_with(model: menu_item) do |form| %>
-  <% if menu_item.errors.any? %>
+<%= form_with(model: @menu_item) do |form| %>
+  <% if @menu_item.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(menu_item.errors.count, "error") %> prohibited this menu_item from being saved:</h2>
+      <h2><%= pluralize(@menu_item.errors.count, "error") %> prohibited this menu_item from being saved:</h2>
 
       <ul>
-        <% menu_item.errors.each do |error| %>
+        <% @menu_item.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
+
+  <div>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div>
+    <%= form.label :price, style: "display: block" %>
+    <%= form.text_field :price %>
+  </div>
+
+  <div>
+    <%= form.label :description, style: "display: block" %>
+    <%= form.text_field :description %>
+  </div>
+
+  <div>
+    <%= form.label :category_id, style: "display: block" %>
+    <%= form.collection_select(:category_id, Category.all, :id, :category_name, { :prompt => 'Select a Category', :selected => @menu_item.category_id }, { class: 'form-control' }) %>
+  </div>
 
   <div>
     <%= form.submit %>
