--- a/app/views/menu_items/_menu_item.html.erb
+++ b/app/views/menu_items/_menu_item.html.erb
@@ -1,2 +1,22 @@
 <div id="<%= dom_id menu_item %>">
+  <p>
+    <strong>Name:</strong>
+    <%= menu_item.name %>
+  </p>
+
+  <p>
+    <strong>Price:</strong>
+    <%= menu_item.price %>
+  </p>
+
+  <p>
+    <strong>Description:</strong>
+    <%= menu_item.description %>
+  </p>
+
+  <p>
+    <strong>Category:</strong>
+    <%= menu_item.category.category_name %>
+  </p>
+
 </div>
