Modify Order views and add some customer seeds

--- a/app/views/menu_items/_menu_item.html.erb
+++ b/app/views/menu_items/_menu_item.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id menu_item %>">
+<div id="<%= dom_id menu_item %>">z
   <p>
     <strong>Name:</strong>
     <%= menu_item.name %>
