--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -10,8 +10,8 @@
   </p>
 
   <p>
-    <strong>Customer:</strong>
-    <%= order.customer_id %>
+    <strong>Customer Email:</strong>
+    <%= order.customer.email %>
   </p>
 
 </div>
