Add Reports Scaffold and Bootstrap

--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -30,3 +30,6 @@
 </div>
 
 <%= link_to "New menu item", new_menu_item_path %>
+<%= link_to "List of categories", categories_path %>
+<%= link_to "List of order", orders_path %>
+<%= link_to "Report", reports_path %>
